ecmascript/parser/tests/test262-error-references/fail/abe5f49acb8e132a.js.stderr
error: Invalid unicode escape
 --> $DIR/tests/test262-parser/fail/abe5f49acb8e132a.js:1:2
  |
1 | "\u{FFZ}"
  |  ^^^^^

